# dir-compare-rust

./: .gitignore  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  README.md  RELEASE_NOTES.md  SPEC.md
.claude/: settings.local.json
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_tests.rs
core/: Cargo.toml
core/src/: comparison.rs  lib.rs  logger.rs  output.rs
core/tests/: hash_tests.rs  logger_tests.rs  output_tests.rs  unit_tests.rs
docs/: tauri-migration-design.md
gui/: Cargo.toml
gui/src/: dialog.rs  lib.rs  main.rs  test_utils.rs  theme.rs  tree_view.rs
gui/tests/: comparison_method_tests.rs  corner_case_tests.rs  directory_selection_tests.rs  results_display_tests.rs  tree_tests.rs
openspec/changes/add-cross-platform-gui/: design.md  tasks.md
openspec/changes/add-sampled-hash-strategy/: design.md  proposal.md  tasks.md
openspec/changes/add-sync-feature/: design.md  proposal.md  tasks.md
openspec/changes/add-sync-feature/specs/orphan-management/: spec.md
openspec/changes/add-sync-feature/specs/sync-engine/: spec.md
openspec/changes/archive/2026-02-05-add-cross-platform-gui/: proposal.md  tasks.md
openspec/changes/archive/2026-02-08-add-folder-and-file-ignore-filters/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-gui-fixes-and-tests/: proposal.md  tasks.md
openspec/changes/archive/2026-02-16-implement-flat-mode/: tasks.md
openspec/changes/compare-two-dirs/: design.md  proposal.md  tasks.md
openspec/changes/create-gui-automated-test/: design.md  proposal.md  tasks.md
openspec/changes/deprecate-stdout-use-logger/: design.md  proposal.md  tasks.md
openspec/changes/gui-fixes-and-tests/: design.md  tasks.md
openspec/changes/ignore-files-and-patterns/: design.md  proposal.md  tasks.md
openspec/changes/implement-flat-mode/: design.md  proposal.md  tasks.md
openspec/changes/remove-dir-options/: design.md  proposal.md  tasks.md
openspec/specs/flat-mode-comparison/: spec.md
openspec/specs/flat-mode-duplicate-detection/: spec.md
openspec/specs/gui-test-suite/: spec.md
openspec/specs/gui-theme-control/: spec.md
openspec/specs/ignore-patterns/: spec.md
openspec/specs/logging-framework/: spec.md
openspec/specs/robust-file-hashing/: spec.md
scripts/: coverage.sh
src/: comparison.rs  lib.rs  main.rs  output.rs
tests/: output_tests.rs  unit_tests.rs
(+22 files in other folders)
