[workspace]
members = [
    "cli",
    "core",
    "gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dir-compare contributors"]

[workspace.dependencies]
dir-compare-core = { path = "core" }
walkdir = "2.5"
fxhash = "0.2"
thiserror = "1.0"
sha2 = "0.10.9"
clap = { version = "4.4", features = ["derive"] }
egui = "0.27"
eframe = "0.27"
rfd = "0.14"
dirs = "5.0"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
ignore = "0.4"

[workspace.metadata.coverage]
tool = "tarpaulin"
output-formats = ["Html", "Xml", "Lcov"]
output-dir = "target/coverage"
